overlays/prod/text2image-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: text2image-api-deployment
spec:
  template:
    spec:
      containers:
        - name: text2image-api-deployment
