overlays/prod/text2image-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: text2image-api-deployment
  name: text2image-api-service
spec:
  type: LoadBalancer
